@@ -1,6 +1,7 @@
 2020-10-19 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Use ImporterAwareTrait in AbstractStep, resolves #149
+	* Rename "userFunc" property to "userFunction" (and "params" to "parameters"), resolves #150
 
 2020-10-18 Francois Suter (Idéative)  <typo3@ideative.ch>
 
